--- a/public/service.html
+++ b/public/service.html
@@ -44,6 +44,6 @@
         <hr>
         <p>&copy; 2024 Пловдив транспорт. Всички права са запазени.</p>
     </footer>
-    <script src="css/service.css"></script>
+    <script src="scipts/service.js"></script>
 </body>
 </html>
