--- a/public/cl.html
+++ b/public/cl.html
@@ -67,5 +67,6 @@
     <p>&copy; 2024 Пловдив транспорт. Всички права са запазени.</p>
 </footer>
   <script src="scipts/chooseLine.js"> </script>
+  <script src="scipts/authcl.js"></script>
 </body>
 </html>
