--- a/public/fl.html
+++ b/public/fl.html
@@ -21,7 +21,7 @@
                 </a>
                 <ul class="submenu">
                   <li class="menu-item"><a href="/allLines.html" ><h6>Всички линии</h6></a></li>
-                    <li class="menu-item"  id="main-page-button"><a href="/cl.html" ><h6>Избор на любими линии</h6></a></li>
+                    <li class="menu-item"  onclick="redirectToComplaintPage()"><a href="/cl.html" ><h6>Избор на любими линии</h6></a></li>
                     <li class="menu-item"><a href="/fl.html" ><h6>Любими линии</h6></a></li>
                     <li class="menu-item">
                       <a href="/feedback.html"><h6>Изпратете отзив</h6></a>
@@ -54,5 +54,6 @@
     <p>&copy; 2024 Пловдив транспорт. Всички права са запазени.</p>
   </footer>
   <script src="scipts/fl.js"></script>
+  <script src="scipts/authcl.js"></script>
 </body>
 </html>
