--- a/public/cl.html
+++ b/public/cl.html
@@ -55,7 +55,7 @@
       <label><input type="checkbox" name="line" value="36" id="l36"> линия 36</label><br>
     </fieldset>
     <br>
-    <button type="button" class="btn btn-primary" style="margin-left: 40%;width: 20%;" onclick="saveChoice()"><h6>Потврърждение</h6></button>
+    <button type="button" class="btn btn-primary" style="margin-left: 40%;width: 20%;" onclick="saveChoice()"><h6>Потвърждение</h6></button>
   </form>
   <footer>
     <ul class="footer-links">
