update fully menu

--- a/public/complaint.html
+++ b/public/complaint.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/navFirst.css">
     <link rel="stylesheet" href="css/complaints.css">
-    
+    <script src="scipts/scriptNavF.js"></script>
 </head>
 <body>
     <header>
@@ -15,6 +15,9 @@
             <div class="logo">
                 <a href="index.html"><h1>Пловдив транспорт</h1></a>
             </div>
+            <button class="hamburger" aria-label="Toggle navigation">
+                ☰
+            </button>
             <ul class="nav-links">
                 <li><a href="allLines.html" id="main-page-button">Всички линии</a></li>
                 <li><a onclick="redirectToComplaintPage()">Съобщете за проблем</a></li>
