Your commit message here

--- a/public/service.html
+++ b/public/service.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/service.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/navFirst.css">
+    <script src="scipts/scriptNavF.js"></script>
     
 </head>
 <body>
@@ -15,6 +16,9 @@
             <div class="logo">
                 <a href="index.html"><h1>Пловдив транспорт</h1></a>
             </div>
+            <button class="hamburger" aria-label="Toggle navigation">
+                ☰
+            </button>
             <ul class="nav-links">
                 <li><a href="allLines.html" id="main-page-button">Всички линии</a></li>
                 <li><a href="complaint.html">Проблеми</a></li>
