--- a/public/complaint.html
+++ b/public/complaint.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+ 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Complaints and Responses</title>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main1.css">
     <link rel="stylesheet" href="css/navFirst.css">
     <link rel="stylesheet" href="css/complaints.css">
     <script src="scipts/scriptNavF.js"></script>
