--- a/public/login.html
+++ b/public/login.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+ 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Bus Transportation Plovdiv</title>
     <link rel="stylesheet" href="css/login.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/navFirst.css">
+
     
 </head>
 <body>
@@ -33,7 +36,7 @@
                     <label for="password">Парола</label>
                     <input type="password" id="password" name="password" placeholder="Enter your password" required>
                 </div>
-                <button type="submit" class="btn-primary">Влизане</button>
+                <button type="submit" class="btn btn-primary">Влизане</button>
                 <p class="login-help">Нямате профил? <a href="registration.html">Регистрирайте се тук</a>.</p>
             </form>
         </div>
