--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
                 <li><a href="feedback.html">Свържете се с нас</a></li>
                 <li><a href="login.html" id="login-button">Влизане</a></li>
                 <li><a href="registration.html">Регистрация</a></li>
+                <li><a href="AdminLogin.html">Admin</a></li>
             </ul>
         </nav>
     </header>
