--- a/public/complaint.html
+++ b/public/complaint.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/main1.css">
     <link rel="stylesheet" href="css/navFirst.css">
     <link rel="stylesheet" href="css/complaints.css">
-    <script src="scripts/scriptNavF.js" defer></script>
+    <script src="scipts/scriptNavF.js" defer></script>
 </head>
 <body>
     <header>
@@ -85,6 +85,6 @@
         <p>&copy; 2024 Пловдив транспорт. Всички права са запазени.</p>
     </footer>
 
-    <script src="scripts/complaint.js" defer></script>
+    <script src="scipts/comlpaint.js" defer></script>
 </body>
 </html>
