--- a/public/admin-login.html
+++ b/public/admin-login.html
@@ -17,6 +17,6 @@
     </form>
   </div>
 
-  <script src="scripts/admin-login.js"></script>
+  <script src="scrips/admin-login.js"></script>
 </body>
 </html>
