--- a/public/admin-dashboard.html
+++ b/public/admin-dashboard.html
@@ -18,6 +18,6 @@
     <div id="user-list"></div>
   </div>
 
-  <script src="scripts/admin-dashboard.js"></script>
+  <script src="scipts/admin-dashboard.js"></script>
 </body>
 </html>
