--- a/public/admin-dashboard.html
+++ b/public/admin-dashboard.html
@@ -2,6 +2,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+ 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin Dashboard</title>
@@ -14,6 +16,7 @@
     <form id="delete-user-form">
       <input type="text" id="user-id" placeholder="User ID to delete" required>
       <button type="submit">Delete User</button>
+      <a href="/"><button class="btn btn-primary">Home</button></a>
     </form>
     <div id="user-list"></div>
   </div>
