--- a/public/registration.html
+++ b/public/registration.html
@@ -40,7 +40,7 @@
                     <label for="confirm-password">Повторете паролата</label>
                     <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirm your password" required>
                 </div>
-                <button type="submit" class="btn-primary">Регистриране</button>
+                <button type="submit" class="btn btn-primary">Регистриране</button>
                 <p class="login-help">Вече имате профил? <a href="login.html">Влезте тук</a>.</p>
             </form>
         </div>
