--- a/public/admin-login.html
+++ b/public/admin-login.html
@@ -14,7 +14,7 @@
       <input type="email" id="admin-email" placeholder="Email" required>
       <input type="password" id="admin-password" placeholder="Password" required>
       <button type="submit">Login</button>
-      <a href="/"><button class="btn btn-primary">Home</button></a>
+      <a href="/"><button class="btn btn-primary" type="button">Home</button></a>
     </form>
   </div>
 
