--- a/public/admin-dashboard.html
+++ b/public/admin-dashboard.html
@@ -16,7 +16,7 @@
     <form id="delete-user-form">
       <input type="text" id="user-id" placeholder="User ID to delete" required>
       <button type="submit">Delete User</button>
-      <a href="/"><button class="btn btn-primary">Home</button></a>
+      <a href="/"><button type="button" class="btn btn-primary">Home</button></a>
     </form>
     <div id="user-list"></div>
   </div>
