--- a/public/privacy.html
+++ b/public/privacy.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Политика за поверителност</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="stylenb.css">
-    <link rel="stylesheet" href="stylep.css">
+    <link rel="stylesheet" href="css/navbar.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <nav>
