--- a/public/send-news.html
+++ b/public/send-news.html
@@ -91,8 +91,8 @@
         const response = await fetch('/send-news', {
           method: 'POST',
           headers: {
-            'Content-Type': 'application/json',
-            'Authorization': `Bearer ${token}`
+            'Content-Type': 'application/json'
+            
           },
           body: JSON.stringify({ title, content })
         });
