--- a/public/admin-dashboard.html
+++ b/public/admin-dashboard.html
@@ -64,6 +64,7 @@
     <div class="btn-group">
       <a href="delete-user.html"><button>Delete User</button></a>
       <a href="send-news.html"><button>Send News</button></a>
+      <a href="delete-news.html"><button>Delete News</button></a>
     </div>
 
     <a href="/"><button class="logout-btn">Logout</button></a>
