--- a/public/admin-dashboard.html
+++ b/public/admin-dashboard.html
@@ -5,56 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin Dashboard</title>
   <link rel="stylesheet" href="css/admin.css">
-  <style>
-    body {
-      font-family: 'Roboto', sans-serif;
-      background-color: #f4f7fc;
-      margin: 0;
-      padding: 0;
-    }
-    .container {
-      width: 80%;
-      max-width: 800px;
-      margin: 40px auto;
-      text-align: center;
-    }
-    h1 {
-      font-size: 36px;
-      color: #333;
-    }
-    .btn-group {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      margin-top: 30px;
-    }
-    button {
-      padding: 15px 30px;
-      font-size: 18px;
-      color: white;
-      background-color: #007bff;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      transition: background-color 0.3s;
-    }
-    button:hover {
-      background-color: #0056b3;
-    }
-    button:focus {
-      outline: none;
-    }
-    .logout-btn {
-      margin-top: 40px;
-      padding: 10px 20px;
-      background-color: #dc3545;
-      font-size: 16px;
-      border-radius: 5px;
-    }
-    .logout-btn:hover {
-      background-color: #c82333;
-    }
-  </style>
+  <link rel="stylesheet" href="css/admin-dashboard.css">
 </head>
 <body>
 
@@ -66,7 +17,6 @@
       <a href="send-news.html"><button>Send News</button></a>
       <a href="delete-news.html"><button>Delete News</button></a>
     </div>
-
     <a href="/"><button class="logout-btn">Logout</button></a>
   </div>
 </body>
