--- a/public/delete-user.html
+++ b/public/delete-user.html
@@ -21,6 +21,6 @@
     <div id="user-list"></div>
   </div>
 
-  <script src="scipts/admin-dashboard.js"></script>
+  <script src="scipts/delete-user.js"></script>
 </body>
 </html>
