--- a/public/delete-user.html
+++ b/public/delete-user.html
@@ -11,12 +11,11 @@
 </head>
 <body>
   <div class="dashboard-container">
-    <h2>Admin Dashboard</h2>
-    <h3>Manage Users</h3>
+    <h3>Delete Users</h3>
     <form id="delete-user-form">
       <input type="text" id="user-id" placeholder="User ID to delete" required>
       <button type="submit">Delete User</button>
-      <a href="/"><button type="button" class="btn btn-primary">Home</button></a>
+      <button type="button" class="btn btn-primary"><a href="admin-dashboard.html">Back to dashboard</a></button>
     </form>
     <div id="user-list"></div>
   </div>
