--- a/public/delete-news.html
+++ b/public/delete-news.html
@@ -6,17 +6,21 @@
   <title>Delete News</title>
   <link rel="stylesheet" href="css/admin.css">
   <link rel="stylesheet" href="css/delete-news.css">
-  <script src="scipts/delete-news.js"></script>
+  
 </head>
 <body>
   <div class="container">
     <h1>Delete News</h1>
     <div class="news-list" id="news-list">
       <!-- News items will be displayed here -->
+       <h2>Avaliable news</h2>
+    </div>
+    <div class="news-list">
+      <!-- News items will be displayed here -->
       <a href="admin-dashboard.html" class="back-btn">Back to Dashboard</a>
     </div>
     
   </div>
-  
+  <script src="scipts/delete-news.js"</script>
 </body>
 </html>
