--- a/public/delete-news.html
+++ b/public/delete-news.html
@@ -21,6 +21,6 @@
     </div>
     
   </div>
-  <script src="scipts/delete-news.js"</script>
+  <script src="scipts/delete-news.js"></script>
 </body>
 </html>
