--- a/public/cl.html
+++ b/public/cl.html
@@ -41,6 +41,7 @@
     </div>
 </nav>
 <br>
+<main>
   <form id="lineForm" action="/save-choice" method="POST">
     <fieldset>
       <legend>Изберете линии:</legend>
@@ -57,6 +58,7 @@
     <br>
     <button type="button" class="btn btn-primary" style="margin-left: 40%;width: 20%;" onclick="saveChoice()"><h6>Потвърждение</h6></button>
   </form>
+</main>
   <footer>
     <ul class="footer-links">
         <li><a href="/privacy.html">Политика за поверителност</a></li>
