--- a/public/feedback.html
+++ b/public/feedback.html
@@ -43,6 +43,7 @@
           </span>
         </div>
     </nav>
+    <main>
 <div class="absolutefix">
     <div class="container">
         <h1>Форма за обратна връзка</h1>
@@ -55,6 +56,7 @@
         </form>
     </div>
 </div>
+</main>
 <footer>
     <ul class="footer-links">
         <li><a href="privacy.html">Политика за поверителност</a></li>
