--- a/public/admin-login.html
+++ b/public/admin-login.html
@@ -18,6 +18,6 @@
     </form>
   </div>
 
-  <script src="scipts/admin-login.js"></script>
+  <script src="scripts/admin-login.js"></script>
 </body>
 </html>
