--- a/public/delete-user.html
+++ b/public/delete-user.html
@@ -20,6 +20,6 @@
     <div id="user-list"></div>
   </div>
 
-  <script src="scipts/delete-user.js"></script>
+  <script src="scripts/delete-user.js"></script>
 </body>
 </html>
