--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,6 @@
         <p>&copy; 2024 Пловдив транспорт. Всички права са запазени.</p>
     </footer>
     <script src="scripts/authcl.js"></script>
-    <script src="scipts/view-news.js"></script>
+    <script src="scripts/view-news.js"></script>
 </body>
 </html>
