--- a/public/service.html
+++ b/public/service.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/service.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/navbar.css">
-    <script src="scipts/scriptNavF.js"></script>
+    <script src="srcipts/scriptNavF.js"></script>
     <style>footer{
         margin-top: 19.7vh;
     }</style>
@@ -65,6 +65,6 @@
         <hr>
         <p>&copy; 2024 Пловдив транспорт. Всички права са запазени.</p>
     </footer>
-    <script src="scipts/service.js"></script>
+    <script src="scripts/service.js"></script>
 </body>
 </html>
