--- a/public/cl.html
+++ b/public/cl.html
@@ -67,6 +67,6 @@
     <hr>
     <p>&copy; 2024 Пловдив транспорт. Всички права са запазени.</p>
 </footer>
-  <script src="scipts/chooseLine.js"> </script>
+  <script src="scripts/chooseLine.js"> </script>
 </body>
 </html>
