--- a/public/feedback.html
+++ b/public/feedback.html
@@ -65,6 +65,6 @@
     <hr>
     <p>&copy; 2024 Пловдив транспорт. Всички права са запазени.</p>
 </footer>
-    <script src="scipts/feedback.js"></script>
+    <script src="scripts/feedback.js"></script>
 </body>
 </html>
