--- a/public/fl.html
+++ b/public/fl.html
@@ -55,6 +55,6 @@
     <p>&copy; 2024 Пловдив транспорт. Всички права са запазени.</p>
   </footer>
   
-  <script src="scipts/authcl.js"></script>
+  <script src="scripts/authcl.js"></script>
 </body>
 </html>
