--- a/public/login.html
+++ b/public/login.html
@@ -50,6 +50,6 @@
         <hr>
         <p>&copy; 2024 Пловдив транспорт. Всички права са запазени.</p>
     </footer>
-    <script src="scipts/scriptLogin.js"></script>
+    <script src="scripts/scriptLogin.js"></script>
 </body>
 </html>
