--- a/public/privacy.html
+++ b/public/privacy.html
@@ -81,6 +81,6 @@
         <hr>
         <p>&copy; 2024 Пловдив транспорт. Всички права са запазени.</p>
     </footer>
-    <script src="scipts/authcl.js"></script>
+    <script src="scripts/authcl.js"></script>
 </body>
 </html>
