--- a/public/registration.html
+++ b/public/registration.html
@@ -53,6 +53,6 @@
         <hr>
         <p>&copy; 2024 Пловдив транспорт. Всички права са запазени.</p>
     </footer>
-    <script src="scipts/scriptReg.js"></script>
+    <script src="scripts/scriptReg.js"></script>
 </body>
 </html>
