--- a/public/fl.html
+++ b/public/fl.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/navbar.css">
   <link rel="stylesheet" href="css/fl.css">
-  <script src="scipts/fl.js"></script>
+  <script src="scripts/fl.js"></script>
 </head>
 <body>
   <nav>
