--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/main1.css">
     <link rel="stylesheet" href="css/navFirst.css">
     <link rel="stylesheet" href="css/index.css">
-    <script src="scipts/scriptNavF.js"></script>
+    <script src="scripts/scriptNavF.js"></script>
     
 </head>
 <body>
