--- a/public/fl.html
+++ b/public/fl.html
@@ -43,9 +43,11 @@
     </div>
   </nav>
   <br>
+  <main>
   <h5 class="center">Любими линии</h5>
   <div class="button-div"></div>
   <div id="lineButtons" class="center"></div>
+</main>
   <footer>
     <ul class="footer-links">
         <li><a href="privacy.html">Политика за поверителност</a></li>
