--- a/public/allLines.html
+++ b/public/allLines.html
@@ -40,6 +40,7 @@
         <a style="text-decoration: none; color: black;" href="/index.html"><button type="button" class="btn btn-primary"><h5>Изход</h5></button> </a>
         </div>
     </nav>
+    <main>
     <div class="button-container">
         <div class="button-div">
             <a href="lines/liniq1.html">
@@ -98,7 +99,7 @@
             </a>
         </div>
     </div>
-    
+    </main>
     <footer>
         <ul class="footer-links">
             <li><a href="privacy.html">Политика за поверителност</a></li>
