--- a/public/delete-news.html
+++ b/public/delete-news.html
@@ -6,9 +6,19 @@
   <title>Delete News</title>
   <link rel="stylesheet" href="css/admin.css">
   <link rel="stylesheet" href="css/delete-news.css">
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/navFirst.css">
   
 </head>
 <body>
+  <header>
+  <nav>
+      <div class="logo">
+          <a href="index.html"><h1>Пловдив транспорт</h1></a>
+      </div>
+  </nav>
+
+</header>
   <div class="container">
     <h1>Delete News</h1>
     <div class="news-list" id="news-list">
@@ -21,6 +31,14 @@
     </div>
     
   </div>
+  <footer>
+    <ul class="footer-links">
+        <li><a href="/privacy.html">Политика за поверителност</a></li>
+        <li><a href="/feedback.html">Свържете се с нас</a></li>
+    </ul>
+    <hr>
+    <p>&copy; 2024 Пловдив транспорт. Всички права са запазени.</p>
+</footer>
   <script src="scripts/delete-news.js"></script>
 </body>
 </html>
