--- a/public/admin-login.html
+++ b/public/admin-login.html
@@ -6,8 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin Login</title>
   <link rel="stylesheet" href="css/admin.css">
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/navFirst.css">
 </head>
 <body>
+  <header>
+    <nav>
+        <div class="logo">
+            <a href="index.html"><h1>Пловдив транспорт</h1></a>
+        </div>
+    </nav>
+
+</header>
   <div class="login-container">
     <h2>Admin Login</h2>
     <form id="admin-login-form">
@@ -17,7 +27,14 @@
       <a href="/"><button class="btn btn-primary" type="button">Home</button></a>
     </form>
   </div>
-
+  <footer>
+    <ul class="footer-links">
+        <li><a href="/privacy.html">Политика за поверителност</a></li>
+        <li><a href="/feedback.html">Свържете се с нас</a></li>
+    </ul>
+    <hr>
+    <p>&copy; 2024 Пловдив транспорт. Всички права са запазени.</p>
+</footer>
   <script src="scripts/admin-login.js"></script>
 </body>
 </html>
