--- a/public/delete-user.html
+++ b/public/delete-user.html
@@ -8,8 +8,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin Dashboard</title>
   <link rel="stylesheet" href="css/admin.css">
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/navFirst.css">
 </head>
 <body>
+  <header>
+    <nav>
+        <div class="logo">
+            <a href="index.html"><h1>Пловдив транспорт</h1></a>
+        </div>
+    </nav>
+
+</header>
   <div class="dashboard-container">
     <h3>Delete Users</h3>
     <form id="delete-user-form">
@@ -19,7 +29,14 @@
     </form>
     <div id="user-list"></div>
   </div>
-
+  <footer>
+    <ul class="footer-links">
+        <li><a href="/privacy.html">Политика за поверителност</a></li>
+        <li><a href="/feedback.html">Свържете се с нас</a></li>
+    </ul>
+    <hr>
+    <p>&copy; 2024 Пловдив транспорт. Всички права са запазени.</p>
+</footer>
   <script src="scripts/delete-user.js"></script>
 </body>
 </html>
