--- a/public/delete-user.html
+++ b/public/delete-user.html
@@ -15,7 +15,7 @@
     <h3>Delete Users</h3>
     <form id="delete-user-form">
       <input type="text" id="user-id" placeholder="User ID to delete" required>
-      <button type="submit">Delete User</button>
+      <button type="submit" class="warn">Delete User</button>
       <button type="button" class="btn btn-primary"><a href="admin-dashboard.html">Back to dashboard</a></button>
     </form>
     <div id="user-list"></div>
