--- a/public/admin-login.html
+++ b/public/admin-login.html
@@ -8,14 +8,13 @@
   <link rel="stylesheet" href="css/admin.css">
 </head>
 <body>
-  
   <div class="login-container">
     <h2>Admin Login</h2>
     <form id="admin-login-form">
       <input type="email" id="admin-email" placeholder="Email" required>
       <input type="password" id="admin-password" placeholder="Password" required>
       <button type="submit">Login</button>
-      <a href="/"><button class="btn btn-primary" type="button">Home</button></a>
+      <a href="admin-dashboard.html" class="back-btn">Back to Dashboard</a>
     </form>
   </div>
 
