--- a/public/favourite-lines.html
+++ b/public/favourite-lines.html
@@ -7,8 +7,8 @@
   <title>Favorite Lines</title>
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/navbar.css">
-  <link rel="stylesheet" href="css/fl.css">
-  <script src="scripts/fl.js"></script>
+  <link rel="stylesheet" href="css/favourite-lines.css">
+  <script src="scripts/favourite-lines.js"></script>
 </head>
 <body>
   <nav>
