--- a/public/all-lines.html
+++ b/public/all-lines.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/allLines.css">
+    <link rel="stylesheet" href="css/all-lines.css">
 </head>
 <body>
     <nav>
@@ -19,15 +19,13 @@
                         </div>
                     </a>
                     <ul class="submenu">
-                        <li class="menu-item"><a href="/allLines.html" ><h6>Всички линии</h6></a></li>
-                        <li class="menu-item"id="main-page-button"><a href="/cl.html" ><h6>Избор на любими линии</h6></a></li>
-                        <li class="menu-item"><a href="/fl.html" ><h6>Любими линии</h6></a></li>
+                      <li class="menu-item"><a href="/all-lines.html" ><h6>Всички линии</h6></a></li>
+                        <li class="menu-item"id="main-page-button"><a href="/choose-lines.html" ><h6>Избор на любими линии</h6></a></li>
+                        <li class="menu-item"><a href="/favourite-lines.html" ><h6>Любими линии</h6></a></li>
                         <li class="menu-item">
                           <a href="/feedback.html"><h6>Изпратете отзив</h6></a>
                         </li>
-                        
-                    <li class="menu-item"><a href="/complaint.html" ><h6>Сегашни проблеми</h6></a></li>
-                        
+                        <li class="menu-item"><a href="/index.html" ><h6>Сегашни проблеми</h6></a></li>
                     </ul>
                 </li>
             </ul>
