--- a/public/choose-lines.html
+++ b/public/choose-lines.html
@@ -5,32 +5,31 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Choose Lines</title>
-  <link rel="stylesheet" href="css/chooseLine.css">
+  <link rel="stylesheet" href="css/choose-lines.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/navbar.css">
 <body>
   <nav>
     <div class="nav-left">
-        <ul class="menu">
-            <li class="menu-item">
-                <a href="#">
-                    <div class="hamburger">
-                        <div></div>
-                    </div>
-                </a>
-                <ul class="submenu">
-                  
-                  <li class="menu-item"><a href="/allLines.html" ><h6>Всички линии</h6></a></li>
-                    <li class="menu-item"><a href="/cl.html" ><h6>Избор на любими линии</h6></a></li>
-                    <li class="menu-item"><a href="/fl.html" ><h6>Любими линии</h6></a></li>
-                    <li class="menu-item">
-                      <a href="/feedback.html"><h6>Изпратете отзив</h6></a>
-                    </li>
-                    <li class="menu-item"><a href="complaint.html" ><h6>Сегашни проблеми</h6></a></li>
-                </ul>
-            </li>
-        </ul>
-    </div>
+      <ul class="menu">
+          <li class="menu-item">
+              <a href="#">
+                  <div class="hamburger">
+                      <div></div>
+                  </div>
+              </a>
+              <ul class="submenu">
+                <li class="menu-item"><a href="/all-lines.html" ><h6>Всички линии</h6></a></li>
+                  <li class="menu-item"id="main-page-button"><a href="/choose-lines.html" ><h6>Избор на любими линии</h6></a></li>
+                  <li class="menu-item"><a href="/favourite-lines.html" ><h6>Любими линии</h6></a></li>
+                  <li class="menu-item">
+                    <a href="/feedback.html"><h6>Изпратете отзив</h6></a>
+                  </li>
+                  <li class="menu-item"><a href="/index.html" ><h6>Сегашни проблеми</h6></a></li>
+              </ul>
+          </li>
+      </ul>
+  </div>
     <div class="nav-center">
         <span><h4>Пловдив транспорт</h4></span>
     </div>
