--- a/public/feedback.html
+++ b/public/feedback.html
@@ -6,7 +6,6 @@
     <title>Feedback Form</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/feedback.css">
-    <link rel="stylesheet" href="css/feedback.css">
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/main.css">
     
@@ -24,12 +23,13 @@
                         </div>
                     </a>
                     <ul class="submenu">
-                        <li class="menu-item"><a href="/allLines.html" ><h6>Всички линии</h6></a></li>
-                        <li class="menu-item" id="main-page-button"><a href="/cl.html"><h6>Избор на любими линии</h6></a></li>
-                        <li class="menu-item"><a href="/fl.html" ><h6>Любими линии</h6></a></li>
-                        <li class="menu-item"><a href="/feedback.html"><h6>Изпратете отзив</h6></a></li>
-                        
-                    <li class="menu-item"><a href="/complaint.html" ><h6>Сегашни проблеми</h6></a></li>
+                      <li class="menu-item"><a href="/all-lines.html" ><h6>Всички линии</h6></a></li>
+                        <li class="menu-item"id="main-page-button"><a href="/choose-lines.html" ><h6>Избор на любими линии</h6></a></li>
+                        <li class="menu-item"><a href="/favourite-lines.html" ><h6>Любими линии</h6></a></li>
+                        <li class="menu-item">
+                          <a href="/feedback.html"><h6>Изпратете отзив</h6></a>
+                        </li>
+                        <li class="menu-item"><a href="/index.html" ><h6>Сегашни проблеми</h6></a></li>
                     </ul>
                 </li>
             </ul>
