--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/main1.css">
     <link rel="stylesheet" href="css/navFirst.css">
     <link rel="stylesheet" href="css/index.css">
-    <script src="scripts/scriptNavF.js"></script>
+    <script src="scripts/script-navbar-first.js"></script>
     
 </head>
 <body>
@@ -43,7 +43,6 @@
         <hr>
         <p>&copy; 2024 Пловдив транспорт. Всички права са запазени.</p>
     </footer>
-    <script src="scripts/authcl.js"></script>
     <script src="scripts/view-news.js"></script>
 </body>
 </html>
