--- a/public/lines/liniq1.html
+++ b/public/lines/liniq1.html
@@ -22,9 +22,9 @@
                     </div>
                 </a>
                 <ul class="submenu">
-                  <li class="menu-item"><a href="/allLines.html" ><h6>Всички линии</h6></a></li>
-                    <li class="menu-item"id="main-page-button"><a href="/cl.html" ><h6>Избор на любими линии</h6></a></li>
-                    <li class="menu-item"><a href="/fl.html" ><h6>Любими линии</h6></a></li>
+                  <li class="menu-item"><a href="/all-lines.html" ><h6>Всички линии</h6></a></li>
+                    <li class="menu-item"id="main-page-button"><a href="/choose-lines.html" ><h6>Избор на любими линии</h6></a></li>
+                    <li class="menu-item"><a href="/favourite-lines.html" ><h6>Любими линии</h6></a></li>
                     <li class="menu-item">
                       <a href="/feedback.html"><h6>Изпратете отзив</h6></a>
                     </li>
@@ -64,7 +64,6 @@
         <hr>
         <p>&copy; 2024 Пловдив транспорт. Всички права са запазени.</p>
     </footer>
-  <script src="../scipts/1.js"></script>
-  <script src="../scipts/authcl.js"></script>
+  <script src="../scripts/1.js"></script>
 </body>
 </html>
