--- a/public/lines/liniq27.html
+++ b/public/lines/liniq27.html
@@ -16,25 +16,25 @@
 <body>
   <nav>
     <div class="nav-left">
-        <ul class="menu">
-            <li class="menu-item">
-                <a href="#">
-                    <div class="hamburger">
-                        <div></div>
-                    </div>
-                </a>
-                <ul class="submenu">
-                  <li class="menu-item"><a href="/allLines.html" ><h6>Всички линии</h6></a></li>
-                    <li class="menu-item"id="main-page-button"><a href="/cl.html" ><h6>Избор на любими линии</h6></a></li>
-                    <li class="menu-item"><a href="/fl.html" ><h6>Любими линии</h6></a></li>
-                    <li class="menu-item">
-                      <a href="/feedback.html"><h6>Изпратете отзив</h6></a>
-                    </li>
-                    <li class="menu-item"><a href="/index.html" ><h6>Сегашни проблеми</h6></a></li>
-                </ul>
-            </li>
-        </ul>
-    </div>
+      <ul class="menu">
+          <li class="menu-item">
+              <a href="#">
+                  <div class="hamburger">
+                      <div></div>
+                  </div>
+              </a>
+              <ul class="submenu">
+                <li class="menu-item"><a href="/all-lines.html" ><h6>Всички линии</h6></a></li>
+                  <li class="menu-item"id="main-page-button"><a href="/choose-lines.html" ><h6>Избор на любими линии</h6></a></li>
+                  <li class="menu-item"><a href="/favourite-lines.html" ><h6>Любими линии</h6></a></li>
+                  <li class="menu-item">
+                    <a href="/feedback.html"><h6>Изпратете отзив</h6></a>
+                  </li>
+                  <li class="menu-item"><a href="/index.html" ><h6>Сегашни проблеми</h6></a></li>
+              </ul>
+          </li>
+      </ul>
+  </div>
     <div class="nav-center">
         <span><h4>Пловдив транспорт</h4></span>
     </div>
@@ -66,7 +66,6 @@
         <hr>
         <p>&copy; 2024 Пловдив транспорт. Всички права са запазени.</p>
     </footer>
-    <script src="../scipts/27.js"></script>
-    <script src="../scipts/authcl.js"></script>
+    <script src="../scripts/27.js"></script>
 </body>
 </html>
