--- a/public/login.html
+++ b/public/login.html
@@ -8,7 +8,7 @@
     <title>Login - Bus Transportation Plovdiv</title>
     <link rel="stylesheet" href="css/login.css">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/navFirst.css">
+    <link rel="stylesheet" href="css/navbar-first.css">
 
     
 </head>
@@ -50,6 +50,6 @@
         <hr>
         <p>&copy; 2024 Пловдив транспорт. Всички права са запазени.</p>
     </footer>
-    <script src="scripts/scriptLogin.js"></script>
+    <script src="scripts/script-login.js"></script>
 </body>
 </html>
