--- a/public/privacy.html
+++ b/public/privacy.html
@@ -18,15 +18,13 @@
                         </div>
                     </a>
                     <ul class="submenu">
-                        <li class="menu-item"><a href="/success.html"><h6>Всички линии</h6></a></li>
-                        <li class="menu-item"id="main-page-button"><a href="/cl.html"><h6>Избор на любими линии</h6></a></li>
-                        <li class="menu-item"><a href="/fl.html"><h6>Любими линии</h6></a></li>
+                      <li class="menu-item"><a href="/all-lines.html" ><h6>Всички линии</h6></a></li>
+                        <li class="menu-item"id="main-page-button"><a href="/choose-lines.html" ><h6>Избор на любими линии</h6></a></li>
+                        <li class="menu-item"><a href="/favourite-lines.html" ><h6>Любими линии</h6></a></li>
                         <li class="menu-item">
                           <a href="/feedback.html"><h6>Изпратете отзив</h6></a>
                         </li>
-                        
-                    <li class="menu-item"><a href="/complaint.html" ><h6>Сегашни проблеми</h6></a></li>
-                        
+                        <li class="menu-item"><a href="/index.html" ><h6>Сегашни проблеми</h6></a></li>
                     </ul>
                 </li>
             </ul>
@@ -81,6 +79,5 @@
         <hr>
         <p>&copy; 2024 Пловдив транспорт. Всички права са запазени.</p>
     </footer>
-    <script src="scripts/authcl.js"></script>
 </body>
 </html>
