--- a/public/registration.html
+++ b/public/registration.html
@@ -8,7 +8,7 @@
     <title>Login - Bus Transportation Plovdiv</title>
     <link rel="stylesheet" href="css/register.css">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/navFirst.css">
+    <link rel="stylesheet" href="css/navbar-first.css">
     
 </head>
 <body>
@@ -53,6 +53,6 @@
         <hr>
         <p>&copy; 2024 Пловдив транспорт. Всички права са запазени.</p>
     </footer>
-    <script src="scripts/scriptReg.js"></script>
+    <script src="scripts/script-registration.js"></script>
 </body>
 </html>
