--- a/public/send-news.html
+++ b/public/send-news.html
@@ -5,63 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Send News</title>
   <link rel="stylesheet" href="css/admin.css">
-
-  <style>
-    body {
-      font-family: 'Roboto', sans-serif;
-      background-color: #f4f7fc;
-      margin: 0;
-      padding: 0;
-    }
-    .container {
-      width: 80%;
-      max-width: 800px;
-      margin: 40px auto;
-      text-align: center;
-    }
-    h1 {
-      font-size: 36px;
-      color: #333;
-    }
-    .news-form {
-      background-color: #fff;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    }
-    input, textarea {
-      width: 96.5%;
-      padding: 12px;
-      margin: 10px 0;
-      font-size: 16px;
-      border-radius: 5px;
-      border: 1px solid #ddd;
-    }
-    button {
-      padding: 15px 30px;
-      font-size: 18px;
-      color: white;
-      background-color: #28a745;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      transition: background-color 0.3s;
-    }
-    button:hover {
-      background-color: #218838;
-    }
-    .back-btn {
-      margin-top: 20px;
-      padding: 10px 20px;
-      background-color: #007bff;
-      color: white;
-      text-decoration: none;
-      border-radius: 5px;
-    }
-    .back-btn:hover {
-      background-color: #0056b3;
-    }
-  </style>
+  <link rel="stylesheet" href="css/send-news.css">
 </head>
 <body>
 
@@ -79,41 +23,7 @@
     
   </div>
 
-  <script>
-    document.getElementById('send-news-form').addEventListener('submit', async function(event) {
-  event.preventDefault();
-
-  const title = document.getElementById('news-title').value;
-  const content = document.getElementById('news-content').value;
-
-  // Get the admin token from sessionStorage
-  const token = sessionStorage.getItem('adminToken');
-
-  try {
-    const response = await fetch('/send-news', {
-      method: 'POST',
-      headers: {
-        'Content-Type': 'application/json',
-        'Authorization': `Bearer ${token}`,  // Add the token to the Authorization header
-      },
-      body: JSON.stringify({ title, content })
-    });
-
-    const data = await response.json();
-
-    if (response.ok) {
-      alert('News sent successfully!');
-      document.getElementById('send-news-form').reset();
-    } else {
-      alert('Failed to send news: ' + data.message);
-    }
-  } catch (error) {
-    console.error('Error sending news:', error);
-    alert('Error sending news. Please try again.');
-  }
-});
-
-  </script>
+  <script src="scripts/send-news.js"></script>
 
 </body>
 </html>
