--- a/public/service.html
+++ b/public/service.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/service.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/navbar.css">
-    <script src="srcipts/scriptNavF.js"></script>
+    <script src="srcipts/script-navbar-first.js"></script>
     <style>footer{
         margin-top: 19.7vh;
     }</style>
@@ -25,11 +25,10 @@
                             </div>
                         </a>
                         <ul class="submenu">
-                            <li class="menu-item"><a href="/allLines.html" ><h6>Всички линии</h6></a></li>
-                            <li class="menu-item" id="main-page-button"><a href="/cl.html"><h6>Избор на любими линии</h6></a></li>
-                            <li class="menu-item"><a href="/fl.html" ><h6>Любими линии</h6></a></li>
-                            <li class="menu-item"><a href="/feedback.html"><h6>Изпратете отзив</h6></a></li>
-                            
+                            <li class="menu-item"><a href="/all-lines.html" ><h6>Всички линии</h6></a></li>
+                            <li class="menu-item" id="main-page-button"><a href="/choose-lines.html"><h6>Избор на любими линии</h6></a></li>
+                            <li class="menu-item"><a href="/favourite-lines.html" ><h6>Любими линии</h6></a></li>
+                            <li class="menu-item"><a href="/feedback.html"><h6>Изпратете отзив</h6></a></li>  
                         <li class="menu-item"><a href="/complaint.html" ><h6>Сегашни проблеми</h6></a></li>
                         </ul>
                     </li>
