--- a/public/admin-login.html
+++ b/public/admin-login.html
@@ -4,17 +4,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Admin Login</title>
+  <title>Влизане като администратор</title>
   <link rel="stylesheet" href="css/admin.css">
 </head>
 <body>
   <div class="login-container">
-    <h2>Admin Login</h2>
+    <h2>Влизане като администратор</h2>
     <form id="admin-login-form">
-      <input type="email" id="admin-email" placeholder="Email" required>
-      <input type="password" id="admin-password" placeholder="Password" required>
-      <button type="submit">Login</button>
-      <a href="index.html" class="back-btnl">Back to Home Page</a>
+      <input type="email" id="admin-email" placeholder="Е-мейл" required>
+      <input type="password" id="admin-password" placeholder="Парола" required>
+      <button type="submit">Влизане</button>
+      <a href="index.html" class="back-btnl">Обратно къл главната страница</a>
     </form>
   </div>
 
