--- a/public/delete-user.html
+++ b/public/delete-user.html
@@ -1,4 +1,4 @@
-<!-- admin-dashboard.html -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,17 +6,17 @@
  
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Admin Dashboard</title>
+  <title>Изтриване на потребители</title>
   <link rel="stylesheet" href="css/admin.css">
 
 </head>
 <body>
   <div class="dashboard-container">
-    <h3>Delete Users</h3>
+    <h3>Изтриване на потребители</h3>
     <form id="delete-user-form">
-      <input type="text" id="user-id" placeholder="User ID to delete" required>
-      <button type="submit" class="warn">Delete User</button>
-      <button type="button" class="btn btn-primary"><a href="admin-dashboard.html">Back to dashboard</a></button>
+      <input type="text" id="user-id" placeholder="Въведете ИД на потребител за да го изтриете" required>
+      <button type="submit" class="warn">Изтриване на потребител</button>
+      <button type="button" class="btn btn-primary"><a href="admin-dashboard.html">Обратно към администраторския панел</a></button>
     </form>
     <div id="user-list"></div>
   </div>
