--- a/public/send-news.html
+++ b/public/send-news.html
@@ -3,20 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Send News</title>
+  <title>Изпращане на новини</title>
   <link rel="stylesheet" href="css/admin.css">
   <link rel="stylesheet" href="css/send-news.css">
 </head>
 <body>
 
   <div class="container">
-    <h1>Send News</h1>
+    <h1>Изпращане на новини</h1>
     <div class="news-form">
       <form id="send-news-form">
-        <input type="text" id="news-title" placeholder="News Title" required>
-        <textarea id="news-content" placeholder="News Content" rows="5" required></textarea>
+        <input type="text" id="news-title" placeholder="Име на новината" required>
+        <textarea id="news-content" placeholder="Съдържание на новината" rows="5" required></textarea>
         <button type="submit">Send News</button>
-        <a href="admin-dashboard.html" class="back-btn">Back to Dashboard</a>
+        <a href="admin-dashboard.html" class="back-btn">Обратно към администраторския панел</a>
       </form>
     </div>
 
