--- a/public/admin-dashboard.html
+++ b/public/admin-dashboard.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Admin Dashboard</title>
+  <title>Администраторски панел</title>
   <link rel="stylesheet" href="css/admin.css">
   <link rel="stylesheet" href="css/admin-dashboard.css">
   
@@ -11,14 +11,14 @@
 <body>
 
   <div class="container">
-    <h1>Welcome to Admin Dashboard</h1>
+    <h1>Добре дошли в администраторския панел</h1>
 
     <div class="btn-group">
-      <a href="delete-user.html"><button>Delete User</button></a>
-      <a href="send-news.html"><button>Send News</button></a>
-      <a href="delete-news.html"><button>Delete News</button></a>
+      <a href="delete-user.html"><button>Изтриване на потребител</button></a>
+      <a href="send-news.html"><button>Изпращане на новини</button></a>
+      <a href="delete-news.html"><button>Изтриване на новини</button></a>
     </div>
-    <a href="/"><button class="logout-btn">Logout</button></a>
+    <a href="/"><button class="logout-btn">Излизане</button></a>
   </div>
 </body>
 </html>
