--- a/public/delete-news.html
+++ b/public/delete-news.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Delete News</title>
+  <title>Изтриване на новини</title>
   <link rel="stylesheet" href="css/admin.css">
   <link rel="stylesheet" href="css/delete-news.css">
 
@@ -12,14 +12,14 @@
 <body>
 
   <div class="container">
-    <h1>Delete News</h1>
+    <h1>Изтриване на новини</h1>
     <div class="news-list" id="news-list">
       <!-- News items will be displayed here -->
-       <h2>Avaliable news</h2>
+       <h2>Налични новини</h2>
     </div>
     <div class="news-list">
       <!-- News items will be displayed here -->
-      <a href="admin-dashboard.html" class="back-btn">Back to Dashboard</a>
+      <a href="admin-dashboard.html" class="back-btn">Обратно към администраторския панел</a>
     </div>
     
   </div>
