--- a/public/delete-user.html
+++ b/public/delete-user.html
@@ -14,7 +14,7 @@
   <div class="dashboard-container">
     <h3>Изтриване на потребители</h3>
     <form id="delete-user-form">
-      <input type="text" id="user-id" placeholder="Въведете ИД на потребител за да го изтриете" required>
+      <input type="text" id="user-id" placeholder="Въведете ИД на потребител" required>
       <button type="submit" class="warn">Изтриване на потребител</button>
       <button type="button" class="btn btn-primary"><a href="admin-dashboard.html">Обратно към администраторския панел</a></button>
     </form>
