--- a/public/send-news.html
+++ b/public/send-news.html
@@ -15,7 +15,7 @@
       <form id="send-news-form">
         <input type="text" id="news-title" placeholder="Име на новината" required>
         <textarea id="news-content" placeholder="Съдържание на новината" rows="5" required></textarea>
-        <button type="submit">Send News</button>
+        <button type="submit">Изпращане на новини</button>
         <a href="admin-dashboard.html" class="back-btn">Обратно към администраторския панел</a>
       </form>
     </div>
