--- a/public/choose-lines.html
+++ b/public/choose-lines.html
@@ -66,6 +66,6 @@
     <hr>
     <p>&copy; 2024 Пловдив транспорт. Всички права са запазени.</p>
 </footer>
-  <script src="scripts/chooseLine.js"> </script>
+  <script src="scripts/choose-lines.js"> </script>
 </body>
 </html>
