--- a/public/lines/liniq1.html
+++ b/public/lines/liniq1.html
@@ -42,6 +42,9 @@
       </span>
     </div>
 </nav>
+
+
+
 <section>
   <h2>Кой е следващия автобус?</h2>
   <p>Въведете час за да разберете</p>
@@ -53,9 +56,10 @@
   
   
 </section>
-
+<div class="container">
 <h1>Път на линия 1</h1>
 <div id="map"></div>
+</div>
     <footer>
         <ul class="footer-links">
             <li><a href="/privacy.html">Политика за поверителност</a></li>
