--- a/public/lines/liniq27.html
+++ b/public/lines/liniq27.html
@@ -55,9 +55,10 @@
   
   
 </section>
-
+<div class="container">
 <h1>Път на линия 27</h1>
 <div id="map"></div>
+</div>
     <footer>
         <ul class="footer-links">
           <li><a href="/privacy.html">Политика за поверителност</a></li>
