--- a/public/lines/liniq36.html
+++ b/public/lines/liniq36.html
@@ -50,9 +50,10 @@
   
   <p id="result"></p>
 </section>
-
+<div class="container">
 <h1>Път на линия 36</h1>
 <div id="map"></div>
+</div>
     <footer>
         <ul class="footer-links">
           <li><a href="/privacy.html">Политика за поверителност</a></li>
