--- a/public/lines/liniq11.html
+++ b/public/lines/liniq11.html
@@ -53,9 +53,10 @@
   
   
 </section>
-
+<div class="container">
 <h1>Път на линия 11</h1>
 <div id="map"></div>
+</div>
     <footer>
         <ul class="footer-links">
           <li><a href="/privacy.html">Политика за поверителност</a></li>
