--- a/public/lines/liniq16.html
+++ b/public/lines/liniq16.html
@@ -52,9 +52,10 @@
   
   
 </section>
-
+<div class="container">
 <h1>Път на линия 16</h1>
 <div id="map"></div>
+</div>
     <footer>
       <ul class="footer-links">
         <li><a href="/privacy.html">Политика за поверителност</a></li>
