--- a/public/login.html
+++ b/public/login.html
@@ -26,11 +26,11 @@
             <form id="loginForm">
                 <div class="input-group">
                     <label for="email">Е-мейл</label>
-                    <input type="email" id="email" name="email" placeholder="Enter your email" required>
+                    <input type="email" id="email" name="email" placeholder="Въведете вашия е-мейл" required>
                 </div>
                 <div class="input-group">
                     <label for="password">Парола</label>
-                    <input type="password" id="password" name="password" placeholder="Enter your password" required>
+                    <input type="password" id="password" name="password" placeholder="Въведетевашата парола" required>
                 </div>
                 <button type="submit" class="btn btn-primary">Влизане</button>
                 <p class="login-help">Нямате профил? <a href="registration.html">Регистрирайте се тук</a>.</p>
