--- a/public/registration.html
+++ b/public/registration.html
@@ -26,19 +26,19 @@
             <form id="registrationForm">
                 <div class="input-group">
                     <label for="name">Име</label>
-                    <input type="text" id="name" name="name"  placeholder="Enter your full name" required>
+                    <input type="text" id="name" name="name"  placeholder="Въведете вашето име" required>
                 </div>
                 <div class="input-group">
                     <label for="email">Е-мейл</label>
-                    <input type="email" id="email" name="email" placeholder="Enter your email" required>
+                    <input type="email" id="email" name="email" placeholder="Въведете вашия е-майл" required>
                 </div>
                 <div class="input-group">
                     <label for="password">Парола</label>
-                    <input type="password" id="password" name="password" placeholder="Enter your password" required>
+                    <input type="password" id="password" name="password" placeholder="Въведете вашата парола" required>
                 </div>
                 <div class="input-group">
                     <label for="confirm-password">Повторете паролата</label>
-                    <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirm your password" required>
+                    <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Потвърдете паролата" required>
                 </div>
                 <button type="submit" class="btn btn-primary">Регистриране</button>
                 <p class="login-help">Вече имате профил? <a href="login.html">Влезте тук</a>.</p>
