--- a/public/lines/liniq36.html
+++ b/public/lines/liniq36.html
@@ -28,7 +28,7 @@
                   <li class="menu-item">
                     <a href="/feedback.html"><h6>Изпратете отзив</h6></a>
                   </li>
-                  <li class="menu-item"><a href="/index.html" ><h6>Сегашни проблеми</h6></a></li>
+                  <li class="menu-item"><a href="/complaint.html" ><h6>Сегашни проблеми</h6></a></li>
               </ul>
           </li>
       </ul>
