--- a/public/choose-lines.html
+++ b/public/choose-lines.html
@@ -43,7 +43,7 @@
 <main>
   <form id="lineForm" action="/save-choice" method="POST">
     <fieldset>
-      <legend>Изберете линии:</legend>
+      <legend>Изберете любими линии:</legend>
       <br>
       <br>
       <label><input type="checkbox" name="line" value="1" id="l1"> линия 1</label><br>
@@ -55,7 +55,7 @@
       <label><input type="checkbox" name="line" value="36" id="l36"> линия 36</label><br>
     </fieldset>
     <br>
-    <button type="button" class="btn btn-primary" style="margin-left: 40%;width: 20%;" onclick="saveChoice()"><h6>Потвърждение</h6></button>
+    <button type="button" class="btn btn-primary" onclick="saveChoice()"><h6>Потвърждение</h6></button>
   </form>
 </main>
   <footer>
