--- a/public/lines/liniq16.html
+++ b/public/lines/liniq16.html
@@ -12,26 +12,27 @@
 </head>
 
 <body>
-  <div class="nav-left">
-    <ul class="menu">
-        <li class="menu-item">
-            <a href="#">
-                <div class="hamburger">
-                    <div></div>
-                </div>
-            </a>
-            <ul class="submenu">
-              <li class="menu-item"><a href="/all-lines.html" ><h6>Всички линии</h6></a></li>
-                <li class="menu-item"id="main-page-button"><a href="/choose-lines.html" ><h6>Избор на любими линии</h6></a></li>
-                <li class="menu-item"><a href="/favourite-lines.html" ><h6>Любими линии</h6></a></li>
-                <li class="menu-item">
-                  <a href="/feedback.html"><h6>Изпратете отзив</h6></a>
-                </li>
-                <li class="menu-item"><a href="/complaint.html" ><h6>Сегашни проблеми</h6></a></li>
-            </ul>
-        </li>
-    </ul>
-</div>
+  <nav>
+    <div class="nav-left">
+      <ul class="menu">
+          <li class="menu-item">
+              <a href="#">
+                  <div class="hamburger">
+                      <div></div>
+                  </div>
+              </a>
+              <ul class="submenu">
+                <li class="menu-item"><a href="/all-lines.html" ><h6>Всички линии</h6></a></li>
+                  <li class="menu-item"id="main-page-button"><a href="/choose-lines.html" ><h6>Избор на любими линии</h6></a></li>
+                  <li class="menu-item"><a href="/favourite-lines.html" ><h6>Любими линии</h6></a></li>
+                  <li class="menu-item">
+                    <a href="/feedback.html"><h6>Изпратете отзив</h6></a>
+                  </li>
+                  <li class="menu-item"><a href="/complaint.html" ><h6>Сегашни проблеми</h6></a></li>
+              </ul>
+          </li>
+      </ul>
+  </div>
     <div class="nav-center">
         <span><h4>Пловдив транспорт</h4></span>
     </div>
