--- a/public/delete-news.html
+++ b/public/delete-news.html
@@ -19,7 +19,7 @@
     </div>
     <div class="news-list">
       <!-- News items will be displayed here -->
-      <a href="admin-dashboard.html" class="back-btn">Обратно към администраторския панел</a>
+      <a href="admin-dashboard.html" class="back-btn">Към панела</a>
     </div>
     
   </div>
