--- a/public/admin-login.html
+++ b/public/admin-login.html
@@ -14,7 +14,7 @@
       <input type="email" id="admin-email" placeholder="Е-мейл" required>
       <input type="password" id="admin-password" placeholder="Парола" required>
       <button type="submit">Влизане</button>
-      <a href="index.html" class="back-btnl">Обратно къл главната страница</a>
+      <a href="index.html" class="back-btnl">Обратно към главната страница</a>
     </form>
   </div>
 
