--- a/public/delete-user.html
+++ b/public/delete-user.html
@@ -7,7 +7,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Изтриване на потребители</title>
-  <link rel="stylesheet" href="css/admin.css">
   <link rel="stylesheet" href="css/delete-user.css">
 </head>
 <body>
@@ -16,7 +15,7 @@
     <form id="delete-user-form">
       <input type="text" id="user-id" placeholder="Въведете ИД на потребител" required>
       <button type="submit" class="warn">Изтриване на потребител</button>
-      <button type="button" class="btn btn-primary"><a href="admin-dashboard.html">Обратно към администраторския панел</a></button>
+      <a href="admin-dashboard.html"><button type="button" class="back-btn">Обратно към администраторския панел</button></a>
     </form>
     <div id="user-list"></div>
   </div>
