--- a/public/feedback.html
+++ b/public/feedback.html
@@ -35,7 +35,7 @@
             </ul>
         </div>
         <div class="nav-center">
-            <span><h4>Пловдив транспорт</h4></span>
+            <span class="nav-title"><h4>Пловдив транспорт</h4></span>
         </div>
         <div class="nav-right">
           <span >
@@ -48,7 +48,7 @@
     <div class="container">
         <h1>Форма за обратна връзка</h1>
         <form id="feedbackForm">
-            <label for="userEmail">Вашия e-mail:</label>
+            <label for="userEmail">Вашия е-майл:</label>
             <input type="email" id="userEmail" name="userEmail" required>
             <label for="message">Вашето съобщение:</label>
             <textarea id="message" name="message" rows="4" required></textarea>
