--- a/public/privacy.html
+++ b/public/privacy.html
@@ -30,7 +30,7 @@
             </ul>
         </div>
         <div class="nav-center">
-            <span><h4>Пловдив транспорт</h4></span>
+            <span class="nav-title"><h4>Пловдив транспорт</h4></span>
         </div>
         <div class="nav-right">
           <span>
@@ -74,7 +74,7 @@
     <footer>
         <ul class="footer-links">
             <li><a href="privacy.html">Политика за поверителност</a></li>
-            <li><a href="chat.html">Свържете се с нас</a></li>
+            <li><a href="feedback.html">Свържете се с нас</a></li>
         </ul>
         <hr>
         <p>&copy; 2024 Пловдив транспорт. Всички права са запазени.</p>
