--- a/public/service.html
+++ b/public/service.html
@@ -31,7 +31,7 @@
                 </ul>
             </div>
             <div class="nav-center">
-                <span><h4>Пловдив транспорт</h4></span>
+                <span class="nav-title"><h4>Пловдив транспорт</h4></span>
             </div>
             <div class="nav-right">
               <span >
@@ -40,7 +40,7 @@
             </div>
         </nav>
     </header>
-
+<main>
     <section class="complaint-form">
         <h2>Напишете вашия проблем</h2>
         <form id="complaintForm">
@@ -52,6 +52,7 @@
         </form>
         <div id="responseMessage"></div>
     </section>
+</main>
     <footer>
         <ul class="footer-links">
             <li><a href="/privacy.html">Политика за поверителност</a></li>
