--- a/public/all-lines.html
+++ b/public/all-lines.html
@@ -31,7 +31,7 @@
             </ul>
         </div>
         <div class="nav-center">
-            <span><h4>Пловдив транспорт</h4></span>
+            <span class="nav-title"><h4>Пловдив транспорт</h4></span>
         </div>
         <div class="nav-right">
             
