--- a/public/choose-lines.html
+++ b/public/choose-lines.html
@@ -5,9 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Choose Lines</title>
+  <link rel="stylesheet" href="css/navbar.css">
   <link rel="stylesheet" href="css/choose-lines.css">
   <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="css/navbar.css">
+  
 <body>
   <nav>
     <div class="nav-left">
@@ -55,7 +56,7 @@
       <label><input type="checkbox" name="line" value="36" id="l36"> линия 36</label><br>
     </fieldset>
     <br>
-    <button type="button" class="btn btn-primary" onclick="saveChoice()"><h6>Потвърждение</h6></button>
+    <button type="button" class="btn btn-primary button-sub" onclick="saveChoice()"><h6>Потвърждение</h6></button>
   </form>
 </main>
   <footer>
