--- a/public/delete-news.html
+++ b/public/delete-news.html
@@ -20,7 +20,7 @@
     </div>
     <div class="news-list">
       <!-- News items will be displayed here -->
-      <a href="admin-dashboard.html"></a><button type="button" class="btn btn-primary">Обратно към администраторския панел</button></a>
+      <a href="admin-dashboard.html"><button type="button" class="btn btn-primary">Обратно към администраторския панел</button></a>
     </div>
     
   </div>
