--- a/public/login.html
+++ b/public/login.html
@@ -19,7 +19,7 @@
         </nav>
     </header>
 
-    
+    <main>
     <div class="login-container">
         <div class="login-box">
             <h2>Влизане</h2>
@@ -37,6 +37,7 @@
             </form>
         </div>
     </div>
+        </main>
     <footer>
         <ul class="footer-links">
             <li><a href="/privacy.html">Политика за поверителност</a></li>
