--- a/public/registration.html
+++ b/public/registration.html
@@ -20,6 +20,7 @@
         </nav>
 
     </header>
+    <main>
     <div class="reg-container">
         <div class="reg-box">
             <h2>Създайте профил</h2>
@@ -45,6 +46,7 @@
             </form>
         </div>
     </div>
+        </main>
     <footer>
         <ul class="footer-links">
             <li><a href="/privacy.html">Политика за поверителност</a></li>
