--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
             <ul class="nav-links">
                 <li><a href="login.html" id="login-button">Влизане</a></li>
                 <li><a href="registration.html">Регистрация</a></li>
-                <li><a href="admin-login.html">Администраторски панел</a></li>
+                <li><a href="admin-login.html">Взлизане като администратор</a></li>
             </ul>
         </nav>
     </header>
